--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.9.0",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
