--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
