--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "flowbite-react": "^0.6.4",
+    "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "postcss": "^8.4.31",
@@ -25,6 +26,9 @@
     "react-axios": "^2.0.6",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-loading-skeleton": "^3.3.1",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
