--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@material-tailwind/react": "^2.1.4",
     "@table-library/react-table-library": "^4.1.7",
     "@tanstack/react-query": "^5.7.0",
     "autoprefixer": "^10.4.16",
