--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-axios": "^2.0.6",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-intersection-observer": "^9.5.2",
     "react-loading-skeleton": "^3.3.1",
     "react-photo-view": "^1.2.3",
